--- a/modules/endorsement/doc/fr/CHANGELOG
+++ b/modules/endorsement/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Pas de mise à jour des modifications d'une version d'option (ex: extra data, coverage amount) si la version était à la date de souscription ou si on fait un aller retour dans le processus. Amélioration du code en ajoutant une méthode facilement surcheargeble pour mettre à jour les données d'une version d'option
 * BUG#13146 Suppression du contrôle de l'éligibilité lors de la résiliation d'un contrat
 * BUG#11342 Permettre les avenants sur les contrats suspendus
 * BUG#13039 Le résumé d'avenant n'affichait pas les enregistrements supprimés par l'avenant
