--- a/modules/claim_indemnification_group/doc/en/CHANGELOG
+++ b/modules/claim_indemnification_group/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#14331 Fix contract's benefit option parameters used when calculating periods
+
 Version 2.6 - 2019-10-11
 * OTH#00000 Previous insurer base amount and revaluation should be evaluated on indemnification start date not loss start date as the two dates can be different
 * BUG#11529 Only require origin service when necessary
