--- a/modules/claim_indemnification_group/doc/fr/CHANGELOG
+++ b/modules/claim_indemnification_group/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#14331 Correctif sur le paramétrage contrat utilisé dans le calcul des périodes d'indemnisation en fonction des dates de période
+
 Version 2.6 - 2019-10-11
 * OTH#00000 Le montant de base et la revalorisation de l'assureur précédent doivent être évalués en date de début de l'indemnisation et non pas du préjudice car ces deux dates peuvent être différentes
 * BUG#11529 Ne pas rendre obligatoire la prestation d'origine sauf si nécessaire
