migrator_party: Handle delete option in party relation migrator

--- a/modules/migrator_party/doc/en/CHANGELOG
+++ b/modules/migrator_party/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#14327 Handle delete option in party relation migrator
 * FEA#14001 Refactoring of migrate method in address migrator
 * BUG#14049 Refactoring of run query method in migrator address
 * BUG#14075 Refactor of query_data method of migrator.party.relation
