--- a/modules/third_party_protocol_almerys/doc/fr/CHANGELOG
+++ b/modules/third_party_protocol_almerys/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14404 Correction de la condition noemie dans third_party_protocol.batch.almerys
 * BUG#13523 Correction de la chaine de batcjh des retours Almerys et de son mécanisme d'archivage
 * OTH#00000 Support des codes erreur inconnus dans le batch de retour Almerys
 * OTH#00000 Correction du ssn et du perimetre service dans le batch
