--- a/modules/claim_life/doc/fr/CHANGELOG
+++ b/modules/claim_life/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#14365 Correction d'erreur d'affichage du libellé de la date de début d'un préjudice dans un sinistre
+
 Version 2.6 - 2019-10-11
 * BUG#11975 Prise en compte de la date de fin calculée sur l'élément couvert dans la méthode de filtre de l'élément couvert théorique du service délivré
 * BUG#11692 Filtrer les risques commençant après la date d'effet du contrat pour les sinistres calculés "en complément"
