--- a/modules/contract_coverage_amount/doc/en/CHANGELOG
+++ b/modules/contract_coverage_amount/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Add test on coverage amount to prevent crash when computing check on it
 * OTH#00000 Fix simulate API for calculated coverage amount
 * FEA#13644 Calculate coverage amount and return to API
 * OTH#00000 Update contract_coverage_amount tests following
