--- a/modules/party_ssn/doc/en/CHANGELOG
+++ b/modules/party_ssn/doc/en/CHANGELOG
@@ -1,5 +1,8 @@
+* OTH#00000 Fix party convert API if SSN is empty
+
 Version 2.6 - 2019-10-11
 * FEA#12428 Add SSN check validation based on person data
+
 Version 2.4 - 2019-04-12
 * BUG#10981 Fix crash when erasing a party
 * BUG#10131 Allow SSN number that not start with 1 or 2
