--- a/modules/claim/doc/en/CHANGELOG
+++ b/modules/claim/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14487 Fix inability to add a beneficiary on a death claim
 * FEA#13851 Allow to define loss desc and event desc by configuration in xml file
 * BUG#13754 Beneficiary tab will now be hidden for benefit with subscriber type
 * FEA#13546 Allow to easily close contract with the new status 'dropped'
