--- a/modules/contract_coverage_amount_revaluation/doc/en/CHANGELOG
+++ b/modules/contract_coverage_amount_revaluation/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#14478 Fix crash during manage insured endorsement
+
 Version 2.6 - 2019-10-11
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
