--- a/modules/contract/locale/fr.po
+++ b/modules/contract/locale/fr.po
@@ -1671,6 +1671,14 @@ msgctxt "model:ir.message,text:msg_invalid_format"
 msgid "Invalid file format."
 msgstr "Format de fichier non valide."
 
+msgctxt "model:ir.message,text:msg_legacy_quotation_birth_date_required"
+msgid "The birth date is required"
+msgstr "La date de naissance est requise"
+
+msgctxt "model:ir.message,text:msg_legacy_quotation_no_coverage"
+msgid "Please choose a coverage for covered %(number)s"
+msgstr "Veuillez choisir les garanties pour l'assuré %(number)s"
+
 msgctxt ""
 "model:ir.message,text:msg_manual_start_date_anterior_to_contract_initial_start_date"
 msgid ""
