--- a/modules/claim_life/doc/en/CHANGELOG
+++ b/modules/claim_life/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14543 Fix crash when displaying beneficiaries once identify and if documents are missing
 * BUG#14365 Fix error in displaying the start date label of a loss in a claim
 
 Version 2.6 - 2019-10-11
