loan: Allow to calculate premium at loan anniversary date (#3619)
Fix #14566

--- a/modules/loan/doc/en/CHANGELOG
+++ b/modules/loan/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#14566 Allow to calculate premium at loan anniversary date
 * FEA#14008 Include future loans in outstanding amount
 * OTH#00000 Update prices after loan underwriting
 * OTH#0000 Add variable rate kind on loan
