party_cog: UI enhancements on party list view (#3600)

--- a/modules/party_cog/doc/en/CHANGELOG
+++ b/modules/party_cog/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 UI enhancements on party list view
 * FEA#12673 Manage death date on person record
 * FEA#13568 Update fields in party GDPR extraction
 * FEA#13655 Add index on party indentifier code
