--- a/modules/party_cog/doc/fr/CHANGELOG
+++ b/modules/party_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Amélioration graphique sur la vue liste des tiers
 * FEA#12673 Gestion de la date de décès sur une personne
 * FEA#13568 Mise à jour des champs dans l'extraction RGPD d'un tiers
 * FEA#13655 Ajout d'un index sur le code de l'identifiant d'une personne
