--- a/modules/document_request/doc/en/CHANGELOG
+++ b/modules/document_request/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13461 Add button to invalidate attachments
 * BUG#13518 Check extra data business kind
 * BUG#13461 Add button to validate attachments uploaded by B2C API
 * BUG#13092 Wrong domain error  when uploading a document on a document request on a claim
