distribution_report_engine: Do not duplicate link to product when duplicating templates (#3622)

--- a/modules/distribution_report_engine/doc/fr/CHANGELOG
+++ b/modules/distribution_report_engine/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#0000 Ne pas dupliquer le lien vers le produit lors de la duplication d'un modèle de courrier
+
 Version 2.6 - 2019-10-11
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
