document_request: bypass document token creation when document_api not configured (#3617)
document_request: bypass document token creation when document_api not configured

A crash occured when trying to generate a document token if the
document_api was not configured in trytond.conf ; now the token generation is bypassed

fix #14550

--- a/modules/document_request/doc/en/CHANGELOG
+++ b/modules/document_request/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14550 Bypass document token generation when documentation_api not configured
 * FEA#13461 Add button to invalidate attachments
 * BUG#13518 Check extra data business kind
 * BUG#13461 Add button to validate attachments uploaded by B2C API
