--- a/modules/coog_core/doc/fr/CHANGELOG
+++ b/modules/coog_core/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14548 Correctif des chaînes prest IJ dans la chaîne journalière.
 * FEA#14156 Ajout de l'identity azure active directory
 * BUG#13632 Ajout des dépendances pour la méthode on_change
 * OTH#00000 Ajout de l'export_light des groupes pour la classe Role
