claim_group_process: Legal entity is not properly initialized (#3604)
Fix #14428

--- a/modules/contract_group/doc/en/CHANGELOG
+++ b/modules/contract_group/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#14428 Fix legal entity initialization when subsidiary is the contract subscriber
+
 Version 2.6 - 2019-10-11
 * BUG#11993 Add 'active' field in covered element overlapping checks
 * BUG#11862 Improve subsidiaries label in the organization hierarchy
