contract_underwriting: Remove update underwriting from simulate defaults (#3631)
Fix #14628

--- a/modules/contract_underwriting/doc/en/CHANGELOG
+++ b/modules/contract_underwriting/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14628 Do not compute underwritings when simulating a contract by default
 * BUG#0000 Dodge contract/option extra data kind validation on subscription
 
 Version 2.6 - 2019-10-11
