--- a/modules/health/doc/fr/CHANGELOG
+++ b/modules/health/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#14590 Ajout d'une fonction dans le moteur de règles pour accéder aux nombre de tiers couverts liés par une relation au souscripteur sous une limite d'âge
 * FEA#14090 Le ssn n'est requis en souscription via API que si le descripteur de risque l'exige
 * BUG#13778 Affichage de dossier santé uniquement si le tiers est une personne
 * OTH#0000 Ajout de la fonction rang de l'enfant dans le moteur de règle
