--- a/modules/contract_insurance_invoice/doc/en/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Improve invoice generation performances by grouping invoice account calculation
 * BUG#14274 Fix on the present again date if the rejected fee's action specify a date
 * FEA#13397 Move prorata configuration on products
 * BUG#14231 Fix crash when the billing mode is manual at payments fail integration with a present again after action
