legacy_quotation: improve subscription error handling, remove none deferral, translate fees, remove first year row (#3625)
Fix #14640

--- a/modules/contract/locale/fr.po
+++ b/modules/contract/locale/fr.po
@@ -1675,6 +1675,10 @@ msgctxt "model:ir.message,text:msg_legacy_quotation_birth_date_required"
 msgid "The birth date is required"
 msgstr "La date de naissance est requise"
 
+msgctxt "model:ir.message,text:msg_legacy_quotation_fees"
+msgid "Fees"
+msgstr "Frais"
+
 msgctxt "model:ir.message,text:msg_legacy_quotation_no_coverage"
 msgid "Please choose a coverage for covered %(number)s"
 msgstr "Veuillez choisir les garanties pour l'assuré %(number)s"
