--- a/modules/contract/doc/fr/CHANGELOG
+++ b/modules/contract/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#14343 Spécification de la nécessité des données complémentaires dans les APIs
 * BUG#14640 L'API de simulation retirait trop de garanties quand une garantie définissait des options requises sans passer par une règle
 * BUG#14303 Branchement des contrôles de surface dans l'API de simulation
 * FEA#13644 Calcul du montant de couverture et retour dans l'API
