contract_noemie: Use SSN, birth_date & birth order to retrieve covered element (#3641)
Fix #14665

--- a/modules/contract_noemie/doc/en/CHANGELOG
+++ b/modules/contract_noemie/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14665 Use SSN, Birth date, birth order to retrieve the coog's covered_element from 929 flux
 * BUG#12991 Extend set of supported noemie codes for Flow 929 batch
 
 Version 2.6 - 2019-10-11
