party_public_employment: Work subdivision and country must be required only for public employment (#3636)

--- a/modules/party_public_employment/doc/en/CHANGELOG
+++ b/modules/party_public_employment/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Work department and country must mandatory only for public employment
 * FEA#13436 Allow to fill work_country and work_subdivision on a party employment
 * BUG#13193 Set the administrative_situation_sub_status data to null when the administrative_situation data is modified
 
