legacy_quotation: add validation api, add human readable error messages, translate more errors (#3645)

--- a/modules/api/locale/fr.po
+++ b/modules/api/locale/fr.po
@@ -74,6 +74,14 @@ msgctxt "model:ir.api.access,name:"
 msgid "API Access Right"
 msgstr ""
 
+msgctxt "model:ir.message,text:msg_default_api_input_error"
+msgid ""
+"An input error of type \"%(error_type)s\" has been detected "
+"\"%(error_data)s\". Please check your input."
+msgstr ""
+"Une erreur de type \"%(error_type)s\" a été détectée \"%(error_data)s\". "
+"Veuillez vérifier les données renseignées.."
+
 msgctxt "model:ir.ui.menu,name:menu_open_ir_api_access"
 msgid "APIs"
 msgstr ""
