--- a/modules/contract/locale/fr.po
+++ b/modules/contract/locale/fr.po
@@ -1675,10 +1675,6 @@ msgctxt "model:ir.message,text:msg_invalid_format"
 msgid "Invalid file format."
 msgstr "Format de fichier non valide."
 
-msgctxt "model:ir.message,text:msg_legacy_quotation_birth_date_required"
-msgid "The birth date is required"
-msgstr "La date de naissance est requise"
-
 msgctxt "model:ir.message,text:msg_legacy_quotation_fees"
 msgid "Fees"
 msgstr "Frais"
@@ -1686,6 +1682,10 @@ msgstr "Frais"
 msgctxt "model:ir.message,text:msg_legacy_quotation_no_coverage"
 msgid "Please choose a coverage for covered %(number)s"
 msgstr "Veuillez choisir les garanties pour l'assuré %(number)s"
+
+msgctxt "model:ir.message,text:msg_legacy_quotation_no_subscription_address"
+msgid "An address is required for the subscription of %(name)s"
+msgstr "Une adresse est requise pour la souscription de %(name)s"
 
 msgctxt ""
 "model:ir.message,text:msg_manual_start_date_anterior_to_contract_initial_start_date"
