--- a/modules/offered/locale/fr.po
+++ b/modules/offered/locale/fr.po
@@ -966,6 +966,14 @@ msgctxt "field:offered.product-package,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "field:party.party,extra_data:"
+msgid "Extra Data"
+msgstr "Données Complémentaires"
+
+msgctxt "field:party.party,extra_data_summary:"
+msgid "Extra Data Summary"
+msgstr "Résumé des données complémentaires"
+
 msgctxt "field:report.template,products:"
 msgid "Products"
 msgstr "Produits"
@@ -1036,7 +1044,8 @@ msgstr ""
 
 msgctxt "help:extra_data,store_on_party:"
 msgid "If the covered element is a party, will store a copy on it"
-msgstr "Si le risque couvert est un tiers, en conservera une copie sur ce dernier"
+msgstr ""
+"Si le risque couvert est un tiers, en conservera une copie sur ce dernier"
 
 msgctxt "help:extra_data,tags:"
 msgid "Add and search all related configuration objects based on a tag"
@@ -1305,7 +1314,7 @@ msgstr ""
 "Le forçage des données complémentaires %(diff)s doit être fait pour toutes "
 "les formules."
 
-msgctxt "model:ir.message,text:msg_must_force_extra_on_all_packages"
+msgctxt "model:ir.message,text:msg_must_force_coverage_extra_on_all_packages"
 msgid ""
 "The forcing of extra datas %(diff)s for option %(option)s must be done for "
 "all packages that include this option."
@@ -1320,6 +1329,10 @@ msgstr "La souscription par formule n'est disponible que sur un devis"
 msgctxt "model:ir.message,text:msg_too_many_recursion_levels"
 msgid "Too many recursion levels in sub data definition."
 msgstr "La définition des sous données a trop de niveaux de récursivité"
+
+msgctxt "model:ir.message,text:msg_unknown_contract_extra_data"
+msgid "Unknown extra data: %(extra_code)s"
+msgstr "Donnée inconnue: %(extra_code)s"
 
 msgctxt "model:ir.message,text:msg_wrong_rule_format"
 msgid "The return value of the rule must be a dictionnary."
@@ -1536,6 +1549,10 @@ msgstr "Numeric (Virgule flottante)"
 msgctxt "selection:extra_data,type_:"
 msgid "Integer"
 msgstr "Entier"
+
+msgctxt "selection:extra_data,type_:"
+msgid "Multi-Selection"
+msgstr "Multi-Selection"
 
 msgctxt "selection:extra_data,type_:"
 msgid "Numeric"
