--- a/modules/contract_premium_modification/doc/fr/CHANGELOG
+++ b/modules/contract_premium_modification/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#14682 Ajout du taux de réduction appliqué dans le retour de l'API de simulation
 * OTH#00000 Correction du montant total des taxes dans l'API de simulation
 * BUG#14161 Gestion des réductions commerciales automatiques dans l'API simulate
 * OTH#00000 Gestion des réductions commerciales sur des garanties contrats
