endorsement_life: display beneficiary clause tab in add option endorsement (#3653)
Fix #14532

--- a/modules/endorsement_life/doc/fr/CHANGELOG
+++ b/modules/endorsement_life/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#14532 Affichage d'une fenêtre de modification des bénéficiaires dans les avenants de gestion des options quand nécessaire
+
 Version 2.6 - 2019-10-11
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
