--- a/modules/endorsement_life/doc/en/CHANGELOG
+++ b/modules/endorsement_life/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#14532 display a beneficiary clause tab in add option endorsement when needed
+
 Version 2.6 - 2019-10-11
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
