--- a/modules/contract_distribution/doc/fr/CHANGELOG
+++ b/modules/contract_distribution/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#14358 Ajout d'une API qui liste les produits commerciaux disponibles pour un utilisateur
 * OTH#00000 Ajout de vérifications afin d'éviter des plantages. Ceci est complémentaire au commit 241e1ee
 
 Version 2.6 - 2019-10-11
