third_party_right_management: Hide Recompute Period action for quotes (#3662)
Fix #14655

--- a/modules/third_party_right_management/doc/fr/CHANGELOG
+++ b/modules/third_party_right_management/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14655 Cache l'action de re-calcul des périodes sur les devis
 * BUG#13781 Le renouvellement de contrat doit ajuster les périodes délégataires en fonction des changements apportés au contract
 
 Version 2.6 - 2019-10-11
