--- a/modules/third_party_right_management/doc/en/CHANGELOG
+++ b/modules/third_party_right_management/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14655 Hide the Recompute Period action on quotes
 * BUG#13781 Contract renewal should adjust third party periods according to changes on contract
 
 Version 2.6 - 2019-10-11
