--- a/modules/coog_core/doc/en/CHANGELOG
+++ b/modules/coog_core/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11810 Add a line batch report when a batch job generation failed
+* FEA#14650 Add a line in batch report when a batch generated zero jobs
 * BUG#14548 Fix prest ij chains in daily chain
 * FEA#14156 Add azure active directory to identity
 * BUG#13632 Add field depends for on_change method
