contract_life_clause: use default beneficiary clause in susbcription API (#3671)

--- a/modules/contract_life_clause/doc/en/CHANGELOG
+++ b/modules/contract_life_clause/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Use default beneficiary clause in subscription API
 * FEA#12911 delete default accepting true
 
 Version 2.6 - 2019-10-11
