--- a/modules/contract_life_clause/doc/fr/CHANGELOG
+++ b/modules/contract_life_clause/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Utilisation de la clause par défaut dans l'API de souscription
 * FEA#12911 supprimer accepting par défaut
 
 Version 2.6 - 2019-10-11
