api: Add API offloading through celery (#3632)
Fix #14629

--- a/modules/api/doc/en/CHANGELOG
+++ b/modules/api/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#14629 API offloading through celery
 * FEA#13843 Add a negative amount schema
 * OTH#00000 Return a user-friendly error when API context is missing
 
