offered: Allow to see/add products from template (#3659)
Fix #14767

--- a/modules/offered/doc/fr/CHANGELOG
+++ b/modules/offered/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#14767 Possibilité de voir/ajouter les produits depuis les modèles de courriers
 * FEA#14145 Gestion des données complémentaires de tiers : Jusque là, la seule façon d'ajouter des données complémentaires sur un tiers était d'utiliser des données complémentaires de type risque couvert. Ce comportement était utilisé par les projets mais n'était pas forcément optimal. Coog gère dorénavant aussi bien les données complémentaires de personne physique que de personne morale. De plus Coog stockait systématiquement les données complémentaires de type risque assuré sur le tiers correspondant, ce qui pouvait être pratique dans certains cas (l'information fumeur par exemple) mais pas forcément dans tous les cas. Ce comportement est dorénavant optionnel mais désactivé par défaut mais sans changer le comportement chez les clients existants. Maintenant il est possible d'ajouter des données complémentaires sur un souscripteur (physique ou moral) et plus seulement l'assuré et stocker la configuration sur le produit associé.
 * FEA#13356 Ajout des données complémentaires multi-selection
 * BUG#13854 Gestion des données complémentaire en majuscule dans les apis
