--- a/modules/report_engine/locale/fr.po
+++ b/modules/report_engine/locale/fr.po
@@ -1125,6 +1125,10 @@ msgid "Automatic Generation"
 msgstr "Génération automatique"
 
 msgctxt "view:report.template:"
+msgid "Filters"
+msgstr "Filtres"
+
+msgctxt "view:report.template:"
 msgid "Versions"
 msgstr "Versions"
 
