--- a/modules/loan/locale/fr.po
+++ b/modules/loan/locale/fr.po
@@ -835,11 +835,11 @@ msgctxt "model:ir.message,text:msg_invalid_number_of_payments"
 msgid "Number of payments must be > 0."
 msgstr "Le nombre de paiements doit être > 0."
 
-msgctxt "model:ir.message,text:msg_loan_not_calculated"
-msgid "Loan %(loan)s must be calculated before proceeding."
+msgctxt "model:ir.message,text:msg_loans_without_lender_address"
+msgid "The lender address should be set on loans: %(loans)s"
 msgstr ""
-"La table d'amortissement du prêt %(loan)s doit être calculé avant de "
-"continuer"
+"L'adresse de l'organisme prêteur doit être renseignée pour les prêts "
+"%(loans)s"
 
 msgctxt "model:ir.message,text:msg_loan_not_eligible"
 msgid "Coverage %(coverage)s for the loan %(loan_share)s is not eligible"
