--- a/modules/contract_coverage_amount/doc/en/CHANGELOG
+++ b/modules/contract_coverage_amount/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Fix coverage amount rules functional documentation generation due to new field amount_mode replacing free_input
 * OTH#00000 Only restrict coverage_amount on options simulation if there is no coverage amount mode defined on option
 * OTH#00000 Add test on coverage amount to prevent crash when computing check on it
 * OTH#00000 Fix simulate API for calculated coverage amount
